[gd_scene load_steps=6 format=3 uid="uid://cdjgo2on24r31"]

[ext_resource type="Script" path="res://main.gd" id="1_k7chu"]
[ext_resource type="Texture2D" uid="uid://bhurw6tqr1pxo" path="res://resource/image/文件夹.png" id="1_uuij4"]
[ext_resource type="PackedScene" uid="uid://3bxt4d3f1auf" path="res://scene/log_panel.tscn" id="3_cc5g4"]

[sub_resource type="ButtonGroup" id="ButtonGroup_4ymtx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5n4uf"]
content_margin_top = 3.0

[node name="Main" type="Node2D"]
script = ExtResource("1_k7chu")
button_group = SubResource("ButtonGroup_4ymtx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -230.0
offset_top = -51.5
offset_right = 230.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="LogButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "日志"
flat = true

[node name="TypeBar" type="TabContainer" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_5n4uf")
tab_alignment = 1
current_tab = 0

[node name="选择文件" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/TypeBar"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/TypeBar/选择文件"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "proto文件路径:"

[node name="ProtoFilePath" type="LineEdit" parent="CanvasLayer/VBoxContainer/TypeBar/选择文件"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ProtoFileSelectButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/TypeBar/选择文件"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("1_uuij4")

[node name="选择目录" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/TypeBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/TypeBar/选择目录"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "proto目录路径:"

[node name="ProtoDirPath" type="LineEdit" parent="CanvasLayer/VBoxContainer/TypeBar/选择目录"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ProtoDirSelectButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/TypeBar/选择目录"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("1_uuij4")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "protoc路径:"

[node name="ProtocPath" type="LineEdit" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ProtocSelectButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("1_uuij4")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "输出文件夹:"

[node name="OutputDirPath" type="LineEdit" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="OutputDirSelectButton" type="TextureButton" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("1_uuij4")

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_4ymtx")
text = "c#"
metadata/Language = "--csharp_out="

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_4ymtx")
text = "c++"
metadata/Language = "--cpp_out="

[node name="Button3" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_4ymtx")
text = "go"
metadata/Language = "--go_out="

[node name="Button4" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_4ymtx")
text = "java"
metadata/Language = "--java_out="

[node name="Button5" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_4ymtx")
text = "python"
metadata/Language = "--python_out="

[node name="ExportButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "转换"

[node name="SaveConfigButton" type="Button" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "保存配置"

[node name="ProtocSelectDialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(352, 180)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.exe")
use_native_dialog = true

[node name="ProtoFileSelectDialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(352, 180)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.proto")
use_native_dialog = true

[node name="ProtoDirSelectDialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="OutputDirSelectDialog" type="FileDialog" parent="CanvasLayer"]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a Directory"
size = Vector2i(352, 180)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
filters = PackedStringArray("*.exe")
use_native_dialog = true

[node name="LogPanel" parent="CanvasLayer" node_paths=PackedStringArray("log_button") instance=ExtResource("3_cc5g4")]
unique_name_in_owner = true
visible = false
log_button = NodePath("../VBoxContainer/HBoxContainer4/LogButton")
